// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interface should add suites to root 1`] = `
Suite {
  "_events": Object {},
  "_eventsCount": 0,
  "_maxListeners": undefined,
  "children": Array [
    Suite {
      "_events": Object {},
      "_eventsCount": 0,
      "_maxListeners": undefined,
      "children": Array [],
      "description": "test 2",
      "options": Object {
        "bail": false,
        "skip": false,
        "todo": false,
      },
      "parent": [Circular],
      "result": Result {
        "internalMessages": Array [],
        "internalStatus": "pending",
      },
      "start": 0,
      "time": 0,
      "type": "suite",
      Symbol(isRunnable): true,
    },
  ],
  "description": "root",
  "options": Object {
    "bail": false,
    "skip": false,
    "todo": false,
  },
  "parent": undefined,
  "result": Result {
    "internalMessages": Array [],
    "internalStatus": "pending",
  },
  "start": 0,
  "time": 0,
  "type": "suite",
  Symbol(isRunnable): true,
  Symbol(isRoot): true,
}
`;

exports[`Interface should create skipped tests inside of suites 1`] = `
Test {
  "_events": Object {},
  "_eventsCount": 0,
  "_maxListeners": undefined,
  "description": "child 1",
  "fn": [Function],
  "options": Object {
    "skip": true,
    "todo": false,
  },
  "parent": Suite {
    "_events": Object {},
    "_eventsCount": 0,
    "_maxListeners": undefined,
    "children": Array [
      [Circular],
    ],
    "description": "test 5",
    "options": Object {
      "bail": false,
      "skip": true,
      "todo": false,
    },
    "parent": Suite {
      "_events": Object {},
      "_eventsCount": 0,
      "_maxListeners": undefined,
      "children": Array [
        [Circular],
      ],
      "description": "root",
      "options": Object {
        "bail": false,
        "skip": false,
        "todo": false,
      },
      "parent": undefined,
      "result": Result {
        "internalMessages": Array [],
        "internalStatus": "pending",
      },
      "start": 0,
      "time": 0,
      "type": "suite",
      Symbol(isRunnable): true,
      Symbol(isRoot): true,
    },
    "result": Result {
      "internalMessages": Array [],
      "internalStatus": "pending",
    },
    "start": 0,
    "time": 0,
    "type": "suite",
    Symbol(isRunnable): true,
  },
  "result": Result {
    "internalMessages": Array [],
    "internalStatus": "pending",
  },
  "start": 0,
  "time": 0,
  "type": "test",
  Symbol(isRunnable): true,
}
`;

exports[`Interface should create suites 1`] = `
Suite {
  "_events": Object {},
  "_eventsCount": 0,
  "_maxListeners": undefined,
  "children": Array [],
  "description": "test 1",
  "options": Object {
    "bail": false,
    "skip": false,
    "todo": false,
  },
  "parent": Suite {
    "_events": Object {},
    "_eventsCount": 0,
    "_maxListeners": undefined,
    "children": Array [
      [Circular],
    ],
    "description": "root",
    "options": Object {
      "bail": false,
      "skip": false,
      "todo": false,
    },
    "parent": undefined,
    "result": Result {
      "internalMessages": Array [],
      "internalStatus": "pending",
    },
    "start": 0,
    "time": 0,
    "type": "suite",
    Symbol(isRunnable): true,
    Symbol(isRoot): true,
  },
  "result": Result {
    "internalMessages": Array [],
    "internalStatus": "pending",
  },
  "start": 0,
  "time": 0,
  "type": "suite",
  Symbol(isRunnable): true,
}
`;

exports[`Interface should create tests inside of suites 1`] = `
Test {
  "_events": Object {},
  "_eventsCount": 0,
  "_maxListeners": undefined,
  "description": "child 1",
  "fn": [Function],
  "options": Object {
    "skip": false,
    "todo": false,
  },
  "parent": Suite {
    "_events": Object {},
    "_eventsCount": 0,
    "_maxListeners": undefined,
    "children": Array [
      [Circular],
    ],
    "description": "test 4",
    "options": Object {
      "bail": false,
      "skip": true,
      "todo": false,
    },
    "parent": Suite {
      "_events": Object {},
      "_eventsCount": 0,
      "_maxListeners": undefined,
      "children": Array [
        [Circular],
      ],
      "description": "root",
      "options": Object {
        "bail": false,
        "skip": false,
        "todo": false,
      },
      "parent": undefined,
      "result": Result {
        "internalMessages": Array [],
        "internalStatus": "pending",
      },
      "start": 0,
      "time": 0,
      "type": "suite",
      Symbol(isRunnable): true,
      Symbol(isRoot): true,
    },
    "result": Result {
      "internalMessages": Array [],
      "internalStatus": "pending",
    },
    "start": 0,
    "time": 0,
    "type": "suite",
    Symbol(isRunnable): true,
  },
  "result": Result {
    "internalMessages": Array [],
    "internalStatus": "pending",
  },
  "start": 0,
  "time": 0,
  "type": "test",
  Symbol(isRunnable): true,
}
`;

exports[`Interface should create todo tests inside of suites 1`] = `
Test {
  "_events": Object {},
  "_eventsCount": 0,
  "_maxListeners": undefined,
  "description": "child 1",
  "fn": [Function],
  "options": Object {
    "skip": false,
    "todo": true,
  },
  "parent": Suite {
    "_events": Object {},
    "_eventsCount": 0,
    "_maxListeners": undefined,
    "children": Array [
      [Circular],
    ],
    "description": "test 5",
    "options": Object {
      "bail": false,
      "skip": true,
      "todo": false,
    },
    "parent": Suite {
      "_events": Object {},
      "_eventsCount": 0,
      "_maxListeners": undefined,
      "children": Array [
        [Circular],
      ],
      "description": "root",
      "options": Object {
        "bail": false,
        "skip": false,
        "todo": false,
      },
      "parent": undefined,
      "result": Result {
        "internalMessages": Array [],
        "internalStatus": "pending",
      },
      "start": 0,
      "time": 0,
      "type": "suite",
      Symbol(isRunnable): true,
      Symbol(isRoot): true,
    },
    "result": Result {
      "internalMessages": Array [],
      "internalStatus": "pending",
    },
    "start": 0,
    "time": 0,
    "type": "suite",
    Symbol(isRunnable): true,
  },
  "result": Result {
    "internalMessages": Array [],
    "internalStatus": "pending",
  },
  "start": 0,
  "time": 0,
  "type": "test",
  Symbol(isRunnable): true,
}
`;

exports[`Interface should handle nested suites 1`] = `
Suite {
  "_events": Object {},
  "_eventsCount": 0,
  "_maxListeners": undefined,
  "children": Array [
    Suite {
      "_events": Object {},
      "_eventsCount": 0,
      "_maxListeners": undefined,
      "children": Array [
        Test {
          "_events": Object {},
          "_eventsCount": 0,
          "_maxListeners": undefined,
          "description": "test 1",
          "fn": [Function],
          "options": Object {
            "skip": false,
            "todo": false,
          },
          "parent": [Circular],
          "result": Result {
            "internalMessages": Array [],
            "internalStatus": "pending",
          },
          "start": 0,
          "time": 0,
          "type": "test",
          Symbol(isRunnable): true,
        },
        Test {
          "_events": Object {},
          "_eventsCount": 0,
          "_maxListeners": undefined,
          "description": "test 2",
          "fn": [Function],
          "options": Object {
            "skip": false,
            "todo": false,
          },
          "parent": [Circular],
          "result": Result {
            "internalMessages": Array [],
            "internalStatus": "pending",
          },
          "start": 0,
          "time": 0,
          "type": "test",
          Symbol(isRunnable): true,
        },
        Suite {
          "_events": Object {},
          "_eventsCount": 0,
          "_maxListeners": undefined,
          "children": Array [
            Test {
              "_events": Object {},
              "_eventsCount": 0,
              "_maxListeners": undefined,
              "description": "test 1",
              "fn": [Function],
              "options": Object {
                "skip": false,
                "todo": false,
              },
              "parent": [Circular],
              "result": Result {
                "internalMessages": Array [],
                "internalStatus": "pending",
              },
              "start": 0,
              "time": 0,
              "type": "test",
              Symbol(isRunnable): true,
            },
            Test {
              "_events": Object {},
              "_eventsCount": 0,
              "_maxListeners": undefined,
              "description": "test 2",
              "fn": [Function],
              "options": Object {
                "skip": false,
                "todo": false,
              },
              "parent": [Circular],
              "result": Result {
                "internalMessages": Array [],
                "internalStatus": "pending",
              },
              "start": 0,
              "time": 0,
              "type": "test",
              Symbol(isRunnable): true,
            },
          ],
          "description": "component 1",
          "options": Object {
            "bail": false,
            "skip": false,
            "todo": false,
          },
          "parent": [Circular],
          "result": Result {
            "internalMessages": Array [],
            "internalStatus": "pending",
          },
          "start": 0,
          "time": 0,
          "type": "suite",
          Symbol(isRunnable): true,
        },
        Suite {
          "_events": Object {},
          "_eventsCount": 0,
          "_maxListeners": undefined,
          "children": Array [
            Test {
              "_events": Object {},
              "_eventsCount": 0,
              "_maxListeners": undefined,
              "description": "test 1",
              "fn": [Function],
              "options": Object {
                "skip": false,
                "todo": false,
              },
              "parent": [Circular],
              "result": Result {
                "internalMessages": Array [],
                "internalStatus": "pending",
              },
              "start": 0,
              "time": 0,
              "type": "test",
              Symbol(isRunnable): true,
            },
            Test {
              "_events": Object {},
              "_eventsCount": 0,
              "_maxListeners": undefined,
              "description": "test 2",
              "fn": [Function],
              "options": Object {
                "skip": false,
                "todo": false,
              },
              "parent": [Circular],
              "result": Result {
                "internalMessages": Array [],
                "internalStatus": "pending",
              },
              "start": 0,
              "time": 0,
              "type": "test",
              Symbol(isRunnable): true,
            },
            Suite {
              "_events": Object {},
              "_eventsCount": 0,
              "_maxListeners": undefined,
              "children": Array [
                Test {
                  "_events": Object {},
                  "_eventsCount": 0,
                  "_maxListeners": undefined,
                  "description": "test 1",
                  "fn": [Function],
                  "options": Object {
                    "skip": false,
                    "todo": false,
                  },
                  "parent": [Circular],
                  "result": Result {
                    "internalMessages": Array [],
                    "internalStatus": "pending",
                  },
                  "start": 0,
                  "time": 0,
                  "type": "test",
                  Symbol(isRunnable): true,
                },
                Test {
                  "_events": Object {},
                  "_eventsCount": 0,
                  "_maxListeners": undefined,
                  "description": "test 2",
                  "fn": [Function],
                  "options": Object {
                    "skip": false,
                    "todo": false,
                  },
                  "parent": [Circular],
                  "result": Result {
                    "internalMessages": Array [],
                    "internalStatus": "pending",
                  },
                  "start": 0,
                  "time": 0,
                  "type": "test",
                  Symbol(isRunnable): true,
                },
              ],
              "description": "method 1",
              "options": Object {
                "bail": false,
                "skip": false,
                "todo": false,
              },
              "parent": [Circular],
              "result": Result {
                "internalMessages": Array [],
                "internalStatus": "pending",
              },
              "start": 0,
              "time": 0,
              "type": "suite",
              Symbol(isRunnable): true,
            },
            Suite {
              "_events": Object {},
              "_eventsCount": 0,
              "_maxListeners": undefined,
              "children": Array [
                Test {
                  "_events": Object {},
                  "_eventsCount": 0,
                  "_maxListeners": undefined,
                  "description": "test 1",
                  "fn": [Function],
                  "options": Object {
                    "skip": false,
                    "todo": false,
                  },
                  "parent": [Circular],
                  "result": Result {
                    "internalMessages": Array [],
                    "internalStatus": "pending",
                  },
                  "start": 0,
                  "time": 0,
                  "type": "test",
                  Symbol(isRunnable): true,
                },
                Test {
                  "_events": Object {},
                  "_eventsCount": 0,
                  "_maxListeners": undefined,
                  "description": "test 2",
                  "fn": [Function],
                  "options": Object {
                    "skip": false,
                    "todo": false,
                  },
                  "parent": [Circular],
                  "result": Result {
                    "internalMessages": Array [],
                    "internalStatus": "pending",
                  },
                  "start": 0,
                  "time": 0,
                  "type": "test",
                  Symbol(isRunnable): true,
                },
              ],
              "description": "method 2",
              "options": Object {
                "bail": false,
                "skip": false,
                "todo": false,
              },
              "parent": [Circular],
              "result": Result {
                "internalMessages": Array [],
                "internalStatus": "pending",
              },
              "start": 0,
              "time": 0,
              "type": "suite",
              Symbol(isRunnable): true,
            },
          ],
          "description": "component 2",
          "options": Object {
            "bail": false,
            "skip": false,
            "todo": false,
          },
          "parent": [Circular],
          "result": Result {
            "internalMessages": Array [],
            "internalStatus": "pending",
          },
          "start": 0,
          "time": 0,
          "type": "suite",
          Symbol(isRunnable): true,
        },
      ],
      "description": "module",
      "options": Object {
        "bail": false,
        "skip": false,
        "todo": false,
      },
      "parent": [Circular],
      "result": Result {
        "internalMessages": Array [],
        "internalStatus": "pending",
      },
      "start": 0,
      "time": 0,
      "type": "suite",
      Symbol(isRunnable): true,
    },
  ],
  "description": "root",
  "options": Object {
    "bail": false,
    "skip": false,
    "todo": false,
  },
  "parent": undefined,
  "result": Result {
    "internalMessages": Array [],
    "internalStatus": "pending",
  },
  "start": 0,
  "time": 0,
  "type": "suite",
  Symbol(isRunnable): true,
  Symbol(isRoot): true,
}
`;
